Fix issue with misaligned output text

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -26,4 +26,5 @@
 
 #output {
     border: black solid 1px;
+    line-height: 40px;
 }
